--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,25 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="org.jabm.jabmessenger">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
             android:allowBackup="true"
-            android:icon="@drawable/jabmessenger_appdrawer_icon"
+            android:icon="@drawable/jabmessenger_drawericon"
             android:label="@string/app_name"
-            android:roundIcon="@drawable/jabmessenger_appdrawer_icon"
+            android:roundIcon="@drawable/jabmessenger_drawericon"
             android:supportsRtl="true"
             android:theme="@style/Theme.JabMessenger">
-        <activity android:name=".userregisteration.GetStartedActivity">
-        </activity>
-        <activity
-                android:name=".SplashScreenActivity"
-                android:theme="@style/SplashScreenStyle">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-        <activity android:name=".MainActivity">
         </activity>
     </application>
 
