--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="org.jabm.jabmessenger">
-
-    <uses-permission android:name="android.permission.INTERNET"/>
+    package="org.jam.jmessenger">
 
     <application
-            android:allowBackup="true"
-            android:icon="@drawable/jabmessenger_drawericon"
-            android:label="@string/app_name"
-            android:roundIcon="@drawable/jabmessenger_drawericon"
-            android:supportsRtl="true"
-            android:theme="@style/Theme.JabMessenger">
-        <activity android:name=".MainActivity">
+        android:icon="@mipmap/jmessenger_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/jmessenger_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.JMessenger">
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
