--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,16 +2,17 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-parcelize'
+    id "androidx.navigation.safeargs.kotlin"
+    id 'com.google.gms.google-services'
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdk 30
 
     defaultConfig {
-        applicationId "org.jabm.jabmessenger"
-        minSdkVersion 21
-        targetSdkVersion 30
+        applicationId "org.jam.jmessenger"
+        minSdk 21
+        targetSdk 30
         versionCode 1
         versionName "1.0"
 
@@ -31,54 +32,41 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
     buildFeatures {
         viewBinding true
     }
-
     testOptions {
         unitTests.returnDefaultValues = true
     }
 }
 
 dependencies {
-    def nav_version = "2.3.5"
-    def lifecycle_version = "2.3.1"
-
-    // Kotlin
-    implementation "androidx.fragment:fragment-ktx:1.3.6"
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.1'
     apply plugin: "androidx.navigation.safeargs.kotlin"
+    apply plugin: 'com.android.application'
 
-    // Feature module Support
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
-
-    // Testing Navigation
-    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
-
-    // Jetpack Compose Integration
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha05"
-
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation 'androidx.annotation:annotation:1.2.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'com.google.android.material:material:1.4.0'
+    // Feature module Support
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.5"
+    // Jetpack Compose Integration
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha06"
+
     testImplementation 'junit:junit:4.13.2'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    //for smack implementation
-    implementation "org.igniterealtime.smack:smack-android-extensions:4.4.3"
-    implementation "org.igniterealtime.smack:smack-tcp:4.4.3"
-}
-
-configurations {
-    all*.exclude group: 'xpp3', module: 'xpp3'
+    // Testing Navigation
+    androidTestImplementation 'androidx.navigation:navigation-testing:2.3.5'
 }
