--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,10 @@
-rootProject.name = "JabMessenger"
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        jcenter() // Warning: this repository is going to shut down soon
+    }
+}
+rootProject.name = "JMessenger"
 include ':app'
