--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,20 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file('E:\\Keystore\\jmessenger_keystore.jks')
+            storePassword 'ommarshaikh'
+            keyAlias 'jmessenger'
+            keyPassword 'ommarshaikh'
+        }
+        release {
+            storeFile file('E:\\Keystore\\jmessenger_keystore.jks')
+            storePassword 'ommarshaikh'
+            keyPassword 'ommarshaikh'
+            keyAlias 'jmessenger'
+        }
+    }
     compileSdk 30
 
     defaultConfig {
@@ -17,12 +31,19 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        targetSdkVersion 30
+        minSdkVersion 21
+        signingConfig signingConfigs.release
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+        debug {
+            signingConfig signingConfigs.debug
         }
     }
     compileOptions {
@@ -41,12 +62,17 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
-    implementation 'com.google.firebase:firebase-auth:21.0.1'
-    implementation 'androidx.preference:preference:1.1.1'
-    implementation 'com.google.firebase:firebase-database-ktx:20.0.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1-native-mt'
     apply plugin: "androidx.navigation.safeargs.kotlin"
     apply plugin: 'com.android.application'
+
+    // firebase
+    implementation platform('com.google.firebase:firebase-bom:28.4.0')
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.1'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -58,8 +84,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'com.google.android.material:material:1.4.0'
+
     // Feature module Support
     implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.5"
+
     // Jetpack Compose Integration
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha06"
 
