--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
@@ -63,6 +63,7 @@ android {
 
 dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1-native-mt'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     apply plugin: "androidx.navigation.safeargs.kotlin"
     apply plugin: 'com.android.application'
 
@@ -95,6 +96,7 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
     // Testing Navigation
     androidTestImplementation 'androidx.navigation:navigation-testing:2.3.5'
 }
