--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
+            <meta-data android:name="android.app.searchable" android:resource="@xml/search_add_friends" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
