--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,19 +21,21 @@ android {
             keyAlias 'jmessenger'
         }
     }
-    compileSdk 30
+    compileSdk 31
 
     defaultConfig {
         applicationId "org.jam.jmessenger"
         minSdk 21
-        targetSdk 30
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        targetSdkVersion 30
+        targetSdkVersion 31
         minSdkVersion 21
         signingConfig signingConfigs.release
+
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -66,15 +68,16 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.firebaseui:firebase-ui-firestore:8.0.0'
     implementation 'com.firebaseui:firebase-ui-storage:8.0.0'
-    implementation 'androidx.paging:paging-runtime:3.1.0-alpha03'
+    implementation 'androidx.paging:paging-runtime-ktx:3.1.0-alpha03'
     apply plugin: "androidx.navigation.safeargs.kotlin"
     apply plugin: 'com.android.application'
+    apply plugin: 'kotlin-kapt'
 
     // firebase
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     implementation 'androidx.preference:preference-ktx:1.1.1'
-    implementation 'com.google.firebase:firebase-database-ktx:20.0.1'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.2'
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
 
@@ -93,13 +96,25 @@ dependencies {
     implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.5"
 
     // Jetpack Compose Integration
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha06"
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha09"
 
     testImplementation 'junit:junit:4.13.2'
-
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Testing Navigation
     androidTestImplementation 'androidx.navigation:navigation-testing:2.3.5'
+
+    // ROOM
+    def room_version = "2.3.0"
+    implementation("androidx.room:room-runtime:$room_version")
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    //To use Kotlin annotation processing tool (kapt)
+    kapt("androidx.room:room-compiler:$room_version")
+    //Kotlin Extensions and Coroutines support for Room
+    implementation("androidx.room:room-ktx:$room_version")
+    //Test helpers
+    testImplementation("androidx.room:room-testing:$room_version")
+    //Paging 3 Integration
+    implementation("androidx.room:room-paging:2.4.0-alpha04")
 }
